turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:30: error: '=>' expected but '(' found.
    case rule(state)(couleurActuelle)(1) if (rule(state)(couleurActuelle)(1) == STOP)    => droite() ; gauche() ;//ne rien faire
                    ^Turmite:31: error: '=>' expected but '(' found.
    case rule(state)(couleurActuelle)(1) if (rule(state)(couleurActuelle)(1) == DEVANT)  => avance() ;
                    ^Turmite:32: error: '=>' expected but '(' found.
    case rule(state)(couleurActuelle)(1) if (rule(state)(couleurActuelle)(1) == GAUCHE)  => gauche() ; avance() ;
                    ^Turmite:33: error: '=>' expected but '(' found.
    case rule(state)(couleurActuelle)(1) if (rule(state)(couleurActuelle)(1) == ARRIERE) => retourne() ; avance() ;
                    ^Turmite:34: error: '=>' expected but '(' found.
    case rule(state)(couleurActuelle)(1) if (rule(state)(couleurActuelle)(1) == DROITE)  => droite() ; avance() ;
                    ^